<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/adogURL"
        android:layout_width="235dp"
        android:layout_height="161dp"
        android:background="@drawable/ic_placeholder"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:layout_margin="8dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/aId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/aname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/dogName" />


        <TextView
            android:id="@+id/abreed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/dogBreed"
            />

        <TextView
            android:id="@+id/aage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/dogAge" />

        <TextView
            android:id="@+id/ainfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/dogInfo" />

        <TextView
            android:id="@+id/aadoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/dogAdoption" />



    </LinearLayout>

    <Button
        android:id="@+id/updateButton"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/adoptButton"/>
</LinearLayout>